--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "files.associations": {
     "stat.h": "c",
-    "fcntl.h": "c"
+    "fcntl.h": "c",
+    "in.h": "c",
+    "inet.h": "c"
   }
 }
